@@ -1,4 +1,4 @@
-.\" RCSid "$Id: robjutil.1,v 1.6 2021/03/12 18:32:33 greg Exp $"
+.\" RCSid "$Id: robjutil.1,v 1.7 2021/04/15 23:51:04 greg Exp $"
 .TH ROBJUTIL 1 3/31/20 RADIANCE
 .SH NAME
 robjutil - operate on Wavefront .OBJ file
@@ -37,13 +37,9 @@ will be produced on the standard output.
 If
 .I -r
 is given, a modified .OBJ file will be sent to the standard output.
-This is the default, and is
-typically more useful, since surface normals are better handled by the
-.I obj2rad(1)
-and
-.I obj2mesh(1)
-converters.
-The latter also preserves local texture coordinates for mapping materials.
+This is the default, and is more useful for preserving
+texture coordinates if directed to
+.I obj2mesh(1).
 .PP
 The
 .I +v
@@ -136,10 +132,6 @@ To remove degenerate and duplicate faces from "orig.obj" and write to "final.rad
 .IP "" .2i
 robjutil +r orig.obj > final.rad
 .PP
-To convert the same file, preserving surface normal interpolation:
-.IP "" .2i
-robjutil orig.obj | obj2rad > withnormals.rad
-.PP
 To extract only the groups "cat" and "bell" from the file "kitty.obj" and
 write to a Radiance triangle mesh using materials from "kitty.mat":
 .IP "" .2i
@@ -181,4 +173,4 @@ still possible to assign materials by group manually.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
-cat(1), obj2mesh(1), obj2rad(1) oconv(1), xform(1)
+cat(1), genbox(1), gensurf(1), obj2mesh(1), obj2rad(1) oconv(1), xform(1)
